# forme

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  package-lock.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: charts.mdx  components.mdx  docs.json  embedded-data.mdx  faq.mdx  fonts.mdx  migrating-from-react-pdf.mdx  page-breaks.md  page-breaks.mdx  quickstart.mdx  replacing-puppeteer.md  replacing-puppeteer.mdx  styles.mdx  templates.mdx  vscode.mdx
engine/: CHANGELOG.md  Cargo.toml
engine/src/: error.rs  image_loader.rs  lib.rs  main.rs  qrcode.rs  template.rs  wasm.rs
engine/src/font/: builtin.rs  fallback.rs  metrics.rs  mod.rs  subset.rs
engine/src/layout/: flex.rs  grid.rs  mod.rs  page_break.rs
engine/src/model/: mod.rs
engine/src/pdf/: mod.rs  srgb2014.icc  tagged.rs  xmp.rs
engine/src/style/: mod.rs
engine/src/svg/: mod.rs
engine/src/text/: bidi.rs  knuth_plass.rs  mod.rs  shaping.rs
engine/tests/: integration.rs  visual_regression.rs
src/: lib.rs  main.rs
src/font/: metrics.rs  mod.rs
src/layout/: flex.rs  mod.rs
src/model/: mod.rs
src/pdf/: mod.rs
src/style/: mod.rs
src/text/: mod.rs
templates/: catalog-data.json  catalog.tsx  event-ticket-data.json  event-ticket.tsx  feature-showcase.tsx  grid-dashboard-data.json  grid-dashboard.tsx  invoice-data.json  invoice-template.tsx  invoice.tsx  receipt-data.json  receipt.tsx  report-data.json  report.tsx  shipping-label-data.json  shipping-label.tsx  typography-data.json  typography.tsx
tests/: integration.rs
