[package]
name = "forme"
version = "0.1.0"
edition = "2021"
description = "A page-native PDF rendering engine. Layout INTO pages, not onto an infinite canvas."

[dependencies]
# Compression for PDF content streams
miniz_oxide = "0.7"
# Serialization for document input
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Future dependencies (uncomment when needed) ---
ttf-parser = "0.25"         # Real font metrics + subsetting
# unicode-linebreak = "0.1" # UAX#14 line break algorithm
# unicode-script = "0.5"    # Script detection for BiDi
# image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[lib]
name = "forme"
path = "src/lib.rs"

[[bin]]
name = "forme"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
